chore: create encrypted PVC for VM k8s stack

--- a/blueprints/victoria-logs-single/helm-values.yml
+++ b/blueprints/victoria-logs-single/helm-values.yml
@@ -139,7 +139,7 @@ server:
     annotations: {}
 
     # -- StorageClass to use for persistent volume. Requires server.persistentVolume.enabled: true. If defined, PVC created automatically
-    storageClassName: hcloud-volumes
+    storageClassName: hcloud-volumes-encrypted
 
     # -- Existing Claim name. If defined, PVC must be created manually before volume will be bound
     existingClaim: ""
@@ -152,7 +152,7 @@ server:
     # -- Mount subpath
     subPath: ""
     # -- Size of the volume. Should be calculated based on the logs you send and retention policy you set.
-    size: 64Gi
+    size: 10Gi
 
   # -- StatefulSet/Deployment additional labels
   extraLabels: {}
