chore: some daily grind, mainly healthcheck for k8s deployments

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,3 +3,7 @@ inventory = ./inventory
 roles_path = ~/.ansible/roles:./roles
 verbosity = 2
 interpreter_python = auto_silent
+
+fact_caching = ansible.builtin.jsonfile
+fact_caching_connection = /tmp/ansible_facts
+fact_caching_timeout = 86400
