--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -131,7 +131,8 @@ listen apiserver
   server k8s 127.0.0.1:6443 check inter 3000 rise 1 fall 3
 
 backend k8s
-  option tcp-check
+  option httpchk GET /
+  http-check expect status 200
   server k8s 127.0.0.1:81 check inter 2000 rise 1 fall 3
 
 backend k8s_apiserver
