chore: expect 404 on haproxy upstream

--- a/kubernetes/newsletter-server/gitops/gateway.yml
+++ b/kubernetes/newsletter-server/gitops/gateway.yml
@@ -13,5 +13,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: cert-manager
   timeout: 5m
   wait: true
