--- a/blueprints/listmonk/statefulset.yml
+++ b/blueprints/listmonk/statefulset.yml
@@ -149,4 +149,5 @@ spec:
           - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: 10Gi
+        storageClassName: hcloud-volumes-encrypted
