--- a/kubernetes/newsletter-server/helm-repositories/meysam81-kustomizations.yml
+++ b/kubernetes/newsletter-server/helm-repositories/meysam81-kustomizations.yml
@@ -6,7 +6,7 @@ spec:
   interval: 12h
   url: oci://ghcr.io/meysam81/kustomizations
   ref:
-    tag: latest
+    semver: "<3.0.0"
   verify:
     provider: cosign
     matchOIDCIdentity:
