chore: remove limits from vmagent

--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -793,6 +793,9 @@ vmagent:
             requests:
               storage: 10Gi
           storageClassName: hcloud-volumes-encrypted
+
+    resources:
+      limits: {}
   # -- (object) VMAgent ingress configuration
   ingress:
     enabled: false
