chore: revert volume storageclass to local path

--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -791,8 +791,8 @@ vmagent:
         spec:
           resources:
             requests:
-              storage: 10Gi
-          storageClassName: hcloud-volumes-encrypted
+              storage: 8Gi
+          storageClassName: local-path
 
     resources:
       limits: {}
