chore: force a upgrade of VM stack helmrelease

--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -796,6 +796,7 @@ vmagent:
 
     resources:
       limits: {}
+      requests: {}
   # -- (object) VMAgent ingress configuration
   ingress:
     enabled: false
