chore: re-deploy listmonk-exporter

--- a/blueprints/listmonk-exporter/externalsecret.yml
+++ b/blueprints/listmonk-exporter/externalsecret.yml
@@ -5,16 +5,12 @@ metadata:
 spec:
   data:
   - remoteRef:
-      key: /listmonk/admin/user
-    secretKey: LISTMONK_ADMIN_USERNAME
+      key: /listmonk/api/user
+    secretKey: LISTMONK_API_USER
   - remoteRef:
-      key: /listmonk/admin/password
-    secretKey: LISTMONK_ADMIN_PASSWORD
+      key: /listmonk/api/token
+    secretKey: LISTMONK_API_TOKEN
   refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
-  target:
-    creationPolicy: Owner
-    deletionPolicy: Delete
-    immutable: false
