chore: deploy datasources again

--- a/blueprints/grafana-instance/kustomization.yml
+++ b/blueprints/grafana-instance/kustomization.yml
@@ -13,7 +13,7 @@ resources:
   - externalsecret.yml
   - grafana.yml
   - httproute.yml
-  # - datasource.yml
+  - datasource.yml
 
 replacements:
   - source:
