--- a/kubernetes/newsletter-server/helm-repositories/grafana-operator.yml
+++ b/kubernetes/newsletter-server/helm-repositories/grafana-operator.yml
@@ -7,5 +7,5 @@ spec:
   interval: 1h
   provider: generic
   ref:
-    semver: v5.12.0
+    semver: "<6.0.0"
   url: oci://ghcr.io/grafana/helm-charts/grafana-operator
