chore: enable cnpg pod monitor

--- a/blueprints/cloudnative-pg/helm-values.yml
+++ b/blueprints/cloudnative-pg/helm-values.yml
@@ -158,6 +158,8 @@ monitoring:
   # -- Additional labels for the podMonitor
   podMonitorAdditionalLabels: {}
 
+  enablePodMonitor: true
+
   grafanaDashboard:
     create: true
     # -- Allows overriding the namespace where the ConfigMap will be created, defaulting to the same one as the Release.
