--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -27,7 +27,7 @@ initContainers: []
 
 config:
   # -- base url path at which headlamp should run
-  baseURL: ""
+  baseURL: https://headlamp.developer-friendly.blog
   oidc:
     # Option 1:
     # @param config.oidc.secret - OIDC secret configuration
@@ -79,8 +79,8 @@ config:
     #       enabled: true
     #       name: oidc
     externalSecret:
-      enabled: false
-      name: ""
+      enabled: true
+      name: headlamp-secrets
   # -- directory to look for plugins
   pluginsDir: "/headlamp/plugins"
   # Extra arguments that can be given to the container. See charts/headlamp/README.md for more information.
