chore: modify the mount path of the final container too

--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -162,7 +162,7 @@ volumeMounts:
   - mountPath: /home/headlamp/.config/Headlamp/kubeconfigs/config
     name: kubeconfig
     readOnly: true
-    subPath: kubeconfig.yml
+    subPath: config
 
 # -- Headlamp pod's volumes
 volumes:
