--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -24,19 +24,14 @@ fullnameOverride: ""
 
 # -- An optional list of init containers to be run before the main containers.
 initContainers:
-  - name: create-kubeconfig
-    image: bitnami/kubectl:1.32.0
-    command:
+  - command:
       - /bin/sh
-      - -c
+      - "-c"
       - |
         kubectl config set-cluster headlamp --server=https://kubernetes.default.svc --certificate-authority=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         kubectl config set-credentials headlamp --token=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
         kubectl config set-context headlamp --cluster=headlamp --user=headlamp
         kubectl config use-context headlamp
-    volumeMounts:
-      - name: kubeconfig
-        mountPath: /home/headlamp/.config/Headlamp/kubeconfigs
     env:
       - name: KUBERNETES_SERVICE_HOST
         valueFrom:
@@ -46,6 +41,20 @@ initContainers:
         value: "6443"
       - name: KUBECONFIG
         value: /home/headlamp/.config/Headlamp/kubeconfigs/config
+    image: bitnami/kubectl:1.32.0
+    name: create-kubeconfig
+    securityContext:
+      capabilities:
+        drop:
+          - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
+      runAsGroup: 101
+      runAsNonRoot: true
+      runAsUser: 100
+    volumeMounts:
+      - mountPath: /home/headlamp/.config/Headlamp/kubeconfigs
+        name: kubeconfig
 
 config:
   # -- base url path at which headlamp should run
