chore: rename the context to main

--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -28,10 +28,10 @@ initContainers:
       - /bin/sh
       - "-c"
       - |
-        kubectl config set-cluster headlamp --server=https://kubernetes.default.svc --certificate-authority=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        kubectl config set-credentials headlamp --token=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
-        kubectl config set-context headlamp --cluster=headlamp --user=headlamp
-        kubectl config use-context headlamp
+        kubectl config set-cluster main --server=https://kubernetes.default.svc --certificate-authority=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        kubectl config set-credentials main --token=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
+        kubectl config set-context main --cluster=main --user=main
+        kubectl config use-context main
     env:
       - name: KUBERNETES_SERVICE_HOST
         valueFrom:
@@ -118,7 +118,10 @@ config:
   extraArgs: []
 
 # -- An optional list of environment variables
-# env:
+env:
+  - name: KUBECONFIG
+    value: /home/headlamp/.config/Headlamp/kubeconfigs/config
+
 #   - name: KUBERNETES_SERVICE_HOST
 #     value: "localhost"
 #   - name: KUBERNETES_SERVICE_PORT
@@ -151,10 +154,10 @@ podSecurityContext:
 
 # -- Headlamp containers Security Context
 securityContext:
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
   runAsNonRoot: true
   privileged: false
   runAsUser: 100
