chore: allow postgres access in CNP

--- a/blueprints/listmonk/ciliumnetworkpolicy.yml
+++ b/blueprints/listmonk/ciliumnetworkpolicy.yml
@@ -28,6 +28,8 @@ spec:
         - ports:
             - port: "443"
               protocol: TCP
+            - port: "5432"
+              protocol: TCP
     - toPorts:
         - ports:
             - port: "53"
