--- a/blueprints/cilium/helm-values.yml
+++ b/blueprints/cilium/helm-values.yml
@@ -1329,7 +1329,7 @@ hubble:
       extraIpAddresses: []
   relay:
     # -- Enable Hubble Relay (requires hubble.enabled=true)
-    enabled: true
+    enabled: false
     # -- Roll out Hubble Relay pods automatically when configmap is updated.
     rollOutPods: false
     # -- Hubble-relay container image.
