chore: force reload of VM k8s stack

--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -766,7 +766,7 @@ vmauth:
 
 vmagent:
   # -- Create VMAgent CR
-  enabled: true
+  enabled: false
   # -- VMAgent annotations
   annotations: {}
   # -- Remote write configuration of VMAgent, allowed parameters defined in a [spec](https://docs.victoriametrics.com/operator/api#vmagentremotewritespec)
