--- a/blueprints/cilium/helm-values.yml
+++ b/blueprints/cilium/helm-values.yml
@@ -1087,13 +1087,15 @@ hubble:
       - port-distribution
       - icmp
       - http
-      - httpV2:exemplars=true;labelsContext=source_ip
+      # - httpV2:exemplars=true;labelsContext=source_ip
       - source_namespace
       - source_workload
       - destination_ip
       - destination_namespace
       - destination_workload
       - traffic_direction
+      - "httpV2:sourceContext=workload-name|pod-name|reserved-identity;destinationContext=workload-name|pod-name|reserved-identity;labelsContext=source_namespace,destination_namespace,traffic_direction"
+      - "kafka:sourceContext=workload-name|pod-name|reserved-identity;destinationContext=workload-name|pod-name|reserved-identity;labelsContext=source_namespace,destination_namespace,traffic_direction"
 
     # -- Enables exporting hubble metrics in OpenMetrics format.
     enableOpenMetrics: true
