--- a/kubernetes/newsletter-server/gitops/namespaces.yml
+++ b/kubernetes/newsletter-server/gitops/namespaces.yml
@@ -9,3 +9,7 @@ items:
     kind: Namespace
     metadata:
       name: cert-manager
+  - apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: database
