chore: create podmonitor for postgres cluster

--- a/blueprints/postgres-cluster/cluster.yml
+++ b/blueprints/postgres-cluster/cluster.yml
@@ -13,6 +13,8 @@ spec:
   enableSuperuserAccess: true
   failoverDelay: 120
   instances: 1
+  monitoring:
+    enablePodMonitor: true
   postgresql:
     parameters:
       auto_explain.log_min_duration: 500ms
