chore: do not forget the underscore

--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -529,7 +529,7 @@ config:
           - source_labels: ['__journal__transport']
             target_label: 'transport'
           - source_labels: ["unit", "hostname"]
-            target_label: stream
+            target_label: _stream
             regex: (.*);(.*)$
             replacement: $1_$2
 
