--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -531,7 +531,7 @@ config:
           - source_labels: ["unit", "hostname"]
             target_label: _stream
             regex: (.*);(.*)$
-            replacement: $1_$2
+            replacement: {unit="$1",hostname="$2"}
 
     # -- You can put here any additional relabel_configs to "kubernetes-pods" job
     extraRelabelConfigs: []
