chore: expose haproxy metrics on all interfaces

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -45,7 +45,7 @@ cache hacache
   max-age 60
 
 frontend stats
-  bind 127.0.0.1:8404
+  bind *:8404
   http-request use-service prometheus-exporter if { path /metrics }
   stats enable
   stats uri /stats
