--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -528,6 +528,9 @@ config:
             target_label: 'syslog_identifier'
           - source_labels: ['__journal__transport']
             target_label: 'transport'
+          - source_labels: ["unit"]
+            target_label: _stream
+            replacement: unit="$1"
 
     # -- You can put here any additional relabel_configs to "kubernetes-pods" job
     extraRelabelConfigs: []
